IPProxy: 完成支付流程，以及bug修复